--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
       - name: Build
         env:
-          # IMPORTANT: this must match your repo name exactly
+          # critical: must match repo name exactly
           BASE_PATH: "/${{ github.event.repository.name }}"
         run: npm run build
       - name: Upload artifact
