--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "node scripts/ensure-untrack.mjs"
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.7.4",
+    "apexcharts": "file:packages/apexcharts",
     "pdfjs-dist": "^4.8.69",
     "svelte": "^4.2.19",
     "lucide-svelte": "^0.462.0",
-    "heroicons-for-svelte": "^0.0.10"
+    "heroicons-for-svelte": "^0.0.10",
+    "svelte-apexcharts": "file:packages/svelte-apexcharts"
   },
   "devDependencies": {
     "vite": "^5.4.10"
