--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "svelte": "^4.2.19",
     "lucide-svelte": "^0.462.0",
     "heroicons-for-svelte": "^0.0.10",
-    "svelte-apexcharts": "file:packages/svelte-apexcharts"
+    "svelte-apexcharts": "file:packages/svelte-apexcharts",
+    "svelte-i18n": "file:packages/svelte-i18n"
   },
   "devDependencies": {
     "vite": "^5.4.10"
