--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.7.4",
     "apexcharts": "file:packages/apexcharts",
+    "esbuild": "^0.25.11",
+    "heroicons-for-svelte": "^0.0.10",
+    "lucide-svelte": "^0.462.0",
     "pdfjs-dist": "^4.8.69",
     "svelte": "^4.2.19",
-    "lucide-svelte": "^0.462.0",
-    "heroicons-for-svelte": "^0.0.10",
     "svelte-apexcharts": "file:packages/svelte-apexcharts",
     "svelte-i18n": "file:packages/svelte-i18n"
   },
